# occupancy_grid_perception_pkg

./: README.md
occupancy_grid_generation_pkg/: CMakeLists.txt  nodelet_plugins.xml  package.xml
occupancy_grid_generation_pkg/launch/: Lidar_stack.launch  launch_all.launch
occupancy_grid_generation_pkg/rviz/: lidar_og.rviz
occupancy_grid_generation_pkg/src/: aggregate_points.cpp  aggregate_points.h  mrf_ground_seg.cpp  mrf_ground_seg.h  occupancy_grid_generation.cpp  occupancy_grid_generation.h
occupancy_grid_msgs/: CMakeLists.txt  package.xml
occupancy_grid_msgs/include/occupancy_grid_msgs/: point_types.h  vehicle_data.h
occupancy_grid_msgs/msg/: pointCloud.msg
occupancy_grid_msgs/src/: vehicle_data.cpp
